--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ournet/topics-domain",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Ournet topics domain module",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -36,15 +36,16 @@
   },
   "homepage": "https://github.com/ournet/topics-domain#readme",
   "devDependencies": {
-    "@types/joi": "^13.4.4",
-    "@types/node": "latest",
-    "ava": "^0.23.0",
-    "debug": "^3.1.0",
+    "@types/joi": "^14.0.0",
+    "@types/node": "10.12.7",
+    "ava": "^0.25.0",
+    "debug": "^4.1.0",
     "rimraf": "^2.6.2",
-    "typescript": "latest"
+    "typescript": "3.1.6"
   },
   "dependencies": {
-    "joi": "^13.6.0",
+    "@ournet/domain": "^0.3.3",
+    "joi": "^14.0.6",
     "transliteration": "^1.6.6"
   }
 }
